# clarity-board

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  KNOWN_ISSUES.md  README.md  ROADMAP.md  card_data.md  docker-compose.yml  example_session.md  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  spec_fact_card.md
.github/: pull_request_template.md
.github/workflows/: e2e.yml  (+2 more)
.memory-bank/: changelog.md  index.md  product.md  requirements.md
backend/: Dockerfile  cli.py  migrate_add_phase.py  pyproject.toml
backend/app/: __init__.py  access.py  auth.py  construct.py  database.py  main.py  models.py
backend/app/services/: ai_service.py  card_service.py  decoder.py  embedding_service.py  event_service.py  main_service.py  mock_ai_service.py  special_questions.py  state_service.py  validator.py
backend/data/: questions.json
backend/docs/: ARCHITECTURE_DEEP.md
backend/scripts/: backup_db.sh  migrate.py  restore_db.sh  restore_smoke.sh
backend/tests/: test_access.py  test_connections.py  test_decoder.py  test_event_service.py  test_health.py  test_integration_endpoints.py  test_main_service.py  test_question_flow.py  test_special_questions.py  test_validator.py
data/: questions.json
e2e/: tsconfig.json
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
prototypes/: prototype_1_minimalist.html  prototype_2_dark.html  prototype_3_warm.html  prototype_4_guided.html  prototype_5_thinking_indicator.html  prototype_6_centered_question.html
scripts/: ci-gates.sh
(+294 files in other folders)
