[project]
name = "fact-card-backend"
version = "0.1.0"
description = "Backend for Fact Card System - Kurpatov's methodology implementation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "openai>=1.60.0",
    "numpy>=2.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
